2012-07-16  Murray Cumming  <murrayc@murrayc.com>

	Settings: Deprecate the gtk-touchscreen-property.

	* gtk/src/settings.hg: Because it was deprecated in GTK+.

3.5.6:

2012-07-11  Murray Cumming  <murrayc@murrayc.com>

	Added Gtk::MenuButton.

	* gtk/gtkmm.h:
	* gtk/src/filelist.am:
	* gtk/src/menubutton.[hg|ccg]: A new wrapper of GtkMenuButton.

2012-07-11  Murray Cumming  <murrayc@murrayc.com>

	Regenerate some GTK+ defs and docs files.

	* tools/extra_defs_gen/generate_defs_gtk.cc: Add 
        GtkMenuButton and GtkSearchEntry.
	* gtk/src/gtk_docs.xml:
	* gtk/src/gtk_methods.defs:
	* gtk/src/gtk_signals.defs: Regenerated with gen_scripts/.

2012-07-11  Murray Cumming  <murrayc@murrayc.com>

	Added Gtk::SearchEntry.

	* gtk/gtkmm.h:
	* gtk/src/filelist.am:
	* gtk/src/searchentry.[hg|ccg]: A new wrapper of GtkSearchEntry.

2012-07-02  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Fix wrap_init() for Quartz (MacOS).

	* gtk/src/filelist.am: Set gtkmm_files_hg to a list of all .hg files.
	* gtk/src/plug.hg:
	* gtk/src/socket.hg: Replace _GTKMMPROC_WIN32_NO_WRAP by _INCLUDE_IN_WRAP_INIT
	and _GMMPROC_WRAP_CONDITIONALLY.
	This requires the latest glibmm from git master. Bug #678883.

2012-07-01  Mark Vender  <markv743@yahoo.co.uk>

	Pixbuf: add const version of save() and friends

	* gdk/src/pixbuf.[hg|ccg]: save() and save_to_buffer() don't have any user-
	visible effects on the pixbuf being saved, thus they should be const.
	Add const versions, deprecate the non-const ones. Bug #678886.

2012-06-18  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	AppChooserDialog: Fix property name in constructors.

	* gtk/src/appchooserdialog.ccg: Change incorrect property name "file" to
	the correct "gfile" in constructors.

2012-06-15  Murray Cumming  <murrayc@murrayc.com>

	Add an extra .defs entry needed for documentation.

	* gdk/src/gdk_extra_objects.defs: Add GdkOffscreenWindow.

2012-06-15  Murray Cumming  <murrayc@murrayc.com>

	WidgetPath: Add some methods.
