@@ -209,9 +209,12 @@ protected:
 #endif /* DOXYGEN_SHOULD_SKIP_THIS */
 
 public:
-#ifndef DOXYGEN_SHOULD_SKIP_THIS
+
+  /** Get the GType for this class, for use with the underlying GObject type system.
+   */
   static GType get_type()      G_GNUC_CONST;
 
+#ifndef DOXYGEN_SHOULD_SKIP_THIS
 ifdef(`__BOOL_DYNAMIC_GTYPE_REGISTRATION__',`
   static GType get_type(GTypeModule* module)      G_GNUC_CONST;
 ',`')
